[gd_scene load_steps=2 format=3 uid="uid://bkwm7wtavni5c"]

[ext_resource type="Script" path="res://gameover/gameover.gd" id="1_k8kjj"]

[node name="Gameover" type="Node2D"]
script = ExtResource("1_k8kjj")

[node name="BtnTenteNovamente" type="Button" parent="."]
offset_right = 150.0
offset_bottom = 40.0
text = "Tente Novamente"

[node name="BtnQuit" type="Button" parent="."]
offset_top = 121.0
offset_right = 150.0
offset_bottom = 161.0
disabled = true
text = "Sair
"

[connection signal="pressed" from="BtnTenteNovamente" to="." method="_on_btn_tente_novamente_pressed"]
[connection signal="pressed" from="BtnQuit" to="." method="_on_btn_quit_pressed"]
